load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "extend",
    srcs = ["internal/extend.h"],
    hdrs = ["extend.h"],
    deps = [
        "//nth/format",
        "//nth/io/writer",
        "//nth/types:reflect",
    ],
)

cc_test(
    name = "extend_test",
    srcs = ["extend_test.cc"],
    deps = [
        ":extend",
        "//nth/test:main",
    ],
)

cc_library(
    name = "equality",
    hdrs = ["equality.h"],
    deps = [
        ":extend",
        "//nth/types:reflect",
    ],
)

cc_test(
    name = "equality_test",
    srcs = ["equality_test.cc"],
    deps = [
        ":equality",
        ":extend",
        "//nth/test:main",
    ],
)

cc_library(
    name = "format",
    srcs = ["internal/format.h"],
    hdrs = ["format.h"],
    deps = [
        ":extend",
        "//nth/container:stack",
        "//nth/debug:unreachable",
        "//nth/format",
        "//nth/format:cc",
        "//nth/format:common",
        "//nth/meta:constant",
        "//nth/types:reflect",
        "//nth/types:structure",
    ],
)

cc_test(
    name = "format_test",
    srcs = ["format_test.cc"],
    deps = [
        ":extend",
        ":format",
        "//nth/format:json",
        "//nth/test:main",
    ],
)

cc_library(
    name = "order",
    hdrs = ["order.h"],
    deps = [
        ":equality",
        ":extend",
        "//nth/types:reflect",
    ],
)

cc_test(
    name = "order_test",
    srcs = ["order_test.cc"],
    deps = [
        ":extend",
        ":order",
        "//nth/test:main",
    ],
)
