load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//nth/debug/log:__subpackages__"])

cc_library(
    name = "arguments",
    hdrs = ["arguments.h"],
    deps = [
        "//nth/debug/log:entry",
        "//nth/debug/log:line",
        "//nth/meta/concepts:core",
    ],
)

cc_library(
    name = "log",
    hdrs = ["log.h"],
    deps = [
        ":arguments",
        "//nth/base:macros",
        "//nth/base:section",
        "//nth/debug:source_location",
        "//nth/debug/log:entry",
        "//nth/debug/log:line",
    ],
)
